Fix waveform canvas clipping border of parent div, change waveform background color

--- a/src/App.css
+++ b/src/App.css
@@ -211,6 +211,8 @@
 
 .visualizer{
   grid-column: 2/4;
+  border: 1.5px solid var(--border-color);
+  border-radius: 15px;
 }
 
 .settings{
